Transferred from the Adobe Open Source Subversion Repository
Revision: 7383
Author:   tan@adobe.com
Date:     2009-05-28T20:32:22.747249Z

Log Message: 
-----------
Updating ASDoc examples for DropDownList and effects:

1. Centered examples.
2. Removed questionable images from effects examples and added copyright approved images.
3. Changed some Halo component references to use Spark instead.

Modified Paths:
--------------
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/assets/back.png</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/DropDownListExample.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/assets/back2.png</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/AnimateShaderTransitionExample.mxml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/assets/c1.png</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/assets/c2.png</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/WipeExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/CrossFadeExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/AnimateColorEffectExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275226 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/effects/examples/CrossFadeExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/CrossFadeExample.mxml
@@ -18,28 +18,28 @@
     </s:transitions>
 
     <s:Panel title="CrossFade Example"
-    	width="75%" height="75%">
+    	width="75%" height="75%" horizontalCenter="0" verticalCenter="0">
 
-        <mx:HBox width="100%" height="100%" paddingLeft="5" paddingTop="5">
+        <s:HGroup width="100%" height="100%" top="5" left="5" right="5">
             <s:Group id="holder">
                 <s:BitmapImage
-		        	source="@Embed('assets/back.png')"
+		        	source="@Embed('assets/back2.png')"
 		        	visible="true" visible.flipped="false"/>
                 <s:BitmapImage
-		        	source="@Embed('assets/c1.png')"
+		        	source="@Embed('assets/c2.png')"
 		        	visible="false" visible.flipped="true"/>
             </s:Group>
 
             <!-- Directions -->
-            <mx:VBox id="detailsBox"
+            <s:VGroup id="detailsBox"
 	        	width="50%"
 	        	left="0">
-                <mx:Text
+                <s:SimpleText
 		        	width="99%"
 		        	color="blue"
 		        	text="CrossFade fades from bitmapFrom to the bitmapTo image. This example cross-fades between two bitmapGraphics in a group via a state transition. Click the 'Play CrossFade' button to see the effect."/>
-            </mx:VBox>
-        </mx:HBox>
+            </s:VGroup>
+        </s:HGroup>
 
         <s:Rect left="0" right="0" bottom="0" height="30">
             <s:fill>
