--- a/projects/spark/asdoc/en_US/spark/effects/examples/CrossFadeExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/CrossFadeExample.mxml
@@ -34,7 +34,7 @@
             <s:VGroup id="detailsBox"
 	        	width="50%"
 	        	left="0">
-                <s:SimpleText
+                <s:Label
 		        	width="99%"
 		        	color="blue"
 		        	text="CrossFade fades from bitmapFrom to the bitmapTo image. This example cross-fades between two bitmapGraphics in a group via a state transition. Click the 'Play CrossFade' button to see the effect."/>
