Transferred from the Adobe Open Source Subversion Repository
Revision: 7246
Author:   tan@adobe.com
Date:     2009-05-22T22:57:55.510169Z

Log Message: 
-----------
Update the Move3D Effect sample to add a zBy value so that it looks better.

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/Move3DEffectExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275234 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/effects/examples/Move3DEffectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/Move3DEffectExample.mxml
@@ -6,9 +6,9 @@
     xmlns:s="library://ns.adobe.com/flex/spark">
 
     <fx:Declarations>
-        <s:Move3D id="moveEffect" target="{targetBox}" xBy="100" repeatCount="2"
-	        repeatBehavior="reverse" effectStart="playButton.enabled=false"
-	        effectEnd="playButton.enabled=true;"/>
+        <s:Move3D id="moveEffect" target="{targetBox}" xBy="100" zBy="100"
+        	repeatCount="2" repeatBehavior="reverse" 
+        	effectStart="playButton.enabled=false" effectEnd="playButton.enabled=true;"/>
     </fx:Declarations>
 
     <s:Panel title="AnimateTransformMove3D Effect Example"
