Transferred from the Adobe Open Source Subversion Repository
Revision: 9398
Author:   rvollmar@adobe.com
Date:     2009-08-19T20:38:05.206955Z

Log Message: 
-----------
Fixing compile error.

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/effects/examples/Rotate3DEffectExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275245 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/effects/examples/Rotate3DEffectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/Rotate3DEffectExample.mxml
@@ -7,7 +7,7 @@
 
     <!-- Standalone effects must be declared in the "Declarations" tag in Flex 4 -->
     <fx:Declarations>
-        <s:Rotate3D id="rotateEffect" target="{targetBox}" angleXBy="180" angleYBy="180" duration="1000" autoCenterTransform="true"
+        <s:Rotate3D id="rotateEffect" target="{targetBox}" angleXFrom="0" angleXTo="180" angleYFrom="0" angleYTo="180" duration="1000" autoCenterTransform="true"
 	        effectStart="playButton.enabled=false" effectEnd="playButton.enabled=true;"/>
     </fx:Declarations>
 
