Transferred from the Adobe Open Source Subversion Repository
Revision: 20233
Author:   smgilson@adobe.com
Date:     2011-02-09T16:51:36.861209Z

Log Message: 
-----------
fix text in ASdoc example 

QE notes: 
Doc notes: 
Bugs: 
Reviewer: 
Tests run: 
Is noteworthy for integration:

Modified Paths:
--------------
/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/effects/examples/Rotate3DEffectExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275248 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/effects/examples/Rotate3DEffectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/Rotate3DEffectExample.mxml
@@ -26,7 +26,7 @@
             <!-- Directions -->
             <mx:VBox id="detailsBox" width="50%" left="0">
                 <mx:Text width="99%" color="blue"
-                    text="The Rotate3D effect rotates a target using the following parameters: angleXFrom, angleXTo, angleXBy, angleYFrom, angleYTo, angleYBy, angleFrom, angleTo, angleBy. Click 'Rotate3D' to watch the effect."/>
+                    text="The Rotate3D effect rotates a target using the following parameters: angleXFrom, angleXTo, angleYFrom, angleYTo, angleZFrom, and angleZTo. Click 'Rotate3D' to watch the effect."/>
             </mx:VBox>
         </mx:HBox>
 
