--- a/projects/spark/asdoc/en_US/spark/effects/examples/WipeExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/WipeExample.mxml
@@ -36,7 +36,7 @@
             <s:VGroup id="detailsBox"
 	        	width="50%"
 	        	left="0">
-                <s:SimpleText
+                <s:Label
 		        	width="99%"
 		        	color="blue"
 		        	text="Wipe wipes from bitmapFrom to the bitmapTo image in the given direction. Click the 'Wipe Right' button to see the effect."/>
