Transferred from the Adobe Open Source Subversion Repository
Revision: 19146
Author:   bsahlas@adobe.com
Date:     2010-12-08T17:45:39.976372Z

Log Message: 
-----------
change url to point to "examples/<example>.swf" - the modules are in the same folder as the loading reference app but the swfs need to be explicitly referred to in the "examples" sub-folder (suggested by Matt H.)

Modified Paths:
--------------
/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/modules/examples/ModuleLoaderExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275337 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/modules/examples/ModuleLoaderExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/modules/examples/ModuleLoaderExample.mxml
@@ -7,7 +7,7 @@
 	</fx:Declarations>
 	
 	<mx:TabNavigator width="500" height="300">
-		<s:ModuleLoader label="Tab One" url="ModuleVerticalLayout.swf"/>
-		<s:ModuleLoader label="Tab Two" url="ModuleHorizontalLayout.swf"/>
+		<s:ModuleLoader label="Tab One" url="examples/ModuleVerticalLayout.swf"/>
+		<s:ModuleLoader label="Tab Two" url="examples/ModuleHorizontalLayout.swf"/>
 	</mx:TabNavigator>
 </s:Application>
