--- a/projects/spark/asdoc/en_US/spark/primitives/examples/ArrowExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/ArrowExample.mxml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- ArrowExample.mxml -->
-<Application xmlns="http://ns.adobe.com/mxml/2009">
-     <Panel title="Arrow Graphic Example"
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+     <s:Panel title="Arrow Graphic Example"
         height="75%" width="75%" layout="horizontal"
         paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
           <Canvas top="0" bottom="0" left="0" right="0">
-               <Graphic x="0" y="0">
-                    <Path>
+               <s:Graphic x="0" y="0">
+                    <s:Path>
                          <!-- Use segment tags to define the arrow. -->
                          <segments>
-                              <MoveSegment x="20" y="0"/>
-                              <CubicBezierSegment x="20" y="35" 
+                              <s:MoveSegment x="20" y="0"/>
+                              <s:CubicBezierSegment x="20" y="35" 
                                    control1X="50" control1Y="0" 
                                    control2X="50" control2Y="35"/>
-                              <LineSegment x="15" y="35"/>
-                              <LineSegment x="15" y="45"/>
-                              <LineSegment x="0" y="32"/>
-                              <LineSegment x="15" y="19"/>
-                              <LineSegment x="15" y="29"/>
-                              <LineSegment x="20" y="29"/>
-                              <CubicBezierSegment x="20" y="6" 
+                              <s:LineSegment x="15" y="35"/>
+                              <s:LineSegment x="15" y="45"/>
+                              <s:LineSegment x="0" y="32"/>
+                              <s:LineSegment x="15" y="19"/>
+                              <s:LineSegment x="15" y="29"/>
+                              <s:LineSegment x="20" y="29"/>
+                              <s:CubicBezierSegment x="20" y="6" 
                                    control1X="44" control1Y="29" 
                                    control2X="44" control2Y="6"/>
                          </segments>
                          <!-- Define the border color of the arrow. -->
-                         <stroke>
-                              <Stroke color="0x888888"/>
-                         </stroke>
+                         <s:stroke>
+                              <s:Stroke color="0x888888"/>
+                         </s:stroke>
                          <!-- Define the fill for the arrow. -->
-                         <fill>
-                              <LinearGradient rotation="90">
-                                   <GradientEntry color="0x000000" alpha="0.8"/>
-                                   <GradientEntry color="0xFFFFFF" alpha="0.8"/>
-                              </LinearGradient>
-                         </fill>
-                    </Path>
-               </Graphic>
-               <Graphic x="100" y="0">
+                         <s:fill>
+                              <s:LinearGradient rotation="90">
+                                   <s:GradientEntry color="0x000000" alpha="0.8"/>
+                                   <s:GradientEntry color="0xFFFFFF" alpha="0.8"/>
+                              </s:LinearGradient>
+                         </s:fill>
+                    </s:Path>
+               </s:Graphic>
+               <s:Graphic x="100" y="0">
                     <!-- Use Use compact syntax with absolute coordinates. -->
-                    <Path data="
+                    <s:Path data="
                          M 20 0 
                          C 50 0 50 35 20 35
                          L 15 35 
@@ -50,21 +50,21 @@
                          C 44 29 44 6 20 6
                     ">
                          <!-- Define the border color of the arrow. -->
-                         <stroke>
-                              <Stroke color="0x888888"/>
-                         </stroke>
+                         <s:stroke>
+                              <s:Stroke color="0x888888"/>
+                         </s:stroke>
                          <!-- Define the fill for the arrow. -->
-                         <fill>
-                              <LinearGradient rotation="90">
-                                   <GradientEntry color="0x000000" alpha="0.8"/>
-                                   <GradientEntry color="0xFFFFFF" alpha="0.8"/>
-                              </LinearGradient>
-                         </fill>
-                    </Path>
-               </Graphic>
-               <Graphic x="200" y="0">
+                         <s:fill>
+                              <s:LinearGradient rotation="90">
+                                   <s:GradientEntry color="0x000000" alpha="0.8"/>
+                                   <s:GradientEntry color="0xFFFFFF" alpha="0.8"/>
+                              </s:LinearGradient>
+                         </s:fill>
+                    </s:Path>
+               </s:Graphic>
+               <s:Graphic x="200" y="0">
                     <!-- Use compact syntax with relative coordinates. -->
-                    <Path data="   
+                    <s:Path data="   
                               m 20 0 
                               c 30 0 30 35 0 35 
                               l -5 0
@@ -75,18 +75,18 @@
                               l 5 0
                               c 24 0 24 -23 0 -23">
                          <!-- Define the border color of the arrow. -->
-                         <stroke>
-                              <Stroke color="0x888888"/>
-                         </stroke>
+                         <s:stroke>
+                              <s:Stroke color="0x888888"/>
+                         </s:stroke>
                          <!-- Define the fill for the arrow. -->
-                         <fill>
-                              <LinearGradient rotation="90">
-                                   <GradientEntry color="0x000000" alpha="0.8"/>
-                                   <GradientEntry color="0xFFFFFF" alpha="0.8"/>
-                              </LinearGradient>
-                         </fill>
-                    </Path>
-               </Graphic>
+                         <s:fill>
+                              <s:LinearGradient rotation="90">
+                                   <s:GradientEntry color="0x000000" alpha="0.8"/>
+                                   <s:GradientEntry color="0xFFFFFF" alpha="0.8"/>
+                              </s:LinearGradient>
+                         </s:fill>
+                    </s:Path>
+               </s:Graphic>
           </Canvas>
-     </Panel>
-</Application>
+     </s:Panel>
+</s:Application>
