Transferred from the Adobe Open Source Subversion Repository
Revision: 3910
Author:   mhorn@adobe.com
Date:     2008-10-27T19:44:27.802565Z

Log Message: 
-----------
update examples so they are Examples Explorer-friendly

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/LineExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/ArrowExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/BitmapGraphicExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/EllipseExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/RectExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/TextBoxExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/CircleExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/TextGraphicExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275351 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/primitives/examples/BitmapImageExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/BitmapImageExample.mxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- BitmapGraphicExample.mxml -->
 <Application xmlns="http://ns.adobe.com/mxml/2009">
-     <Canvas top="0" bottom="0" left="0" right="0">
-          <!-- Single image, not resized, not repeated. -->
-          <Graphic x="0" y="0">             
-               <BitmapGraphic id="bg1" source="@Embed('assets/AirIcon12x12.gif')"/>
-          </Graphic>
-          <!-- Single image, scaled to fit specified dimensions. -->
-          <Graphic x="150" y="0">
-               <BitmapGraphic id="bg2" source="@Embed('assets/AirIcon12x12.gif')" width="60" height="60" resizeMode="scale"/>
-          </Graphic>
-          <!-- Repeated image to fit specified dimensions. -->
-          <Graphic x="300" y="0">
-               <BitmapGraphic id="bg3" source="@Embed('assets/AirIcon12x12.gif')" width="120" height="120" repeat="true"/>
-          </Graphic>
-     </Canvas>
+     <Panel title="Bitmap Graphic Example"
+        height="75%" width="75%" layout="horizontal"
+        paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
+          <Canvas top="0" bottom="0" left="0" right="0">
+               <!-- Single image, not resized, not repeated. -->
+               <Graphic x="0" y="0">             
+                    <BitmapGraphic id="bg1" source="@Embed('assets/AirIcon12x12.gif')"/>
+               </Graphic>
+               <!-- Single image, scaled to fit specified dimensions. -->
+               <Graphic x="150" y="0">
+                    <BitmapGraphic id="bg2" source="@Embed('assets/AirIcon12x12.gif')" width="60" height="60" resizeMode="scale"/>
+               </Graphic>
+               <!-- Repeated image to fit specified dimensions. -->
+               <Graphic x="300" y="0">
+                    <BitmapGraphic id="bg3" source="@Embed('assets/AirIcon12x12.gif')" width="120" height="120" repeat="true"/>
+               </Graphic>
+          </Canvas>
+     </Panel>
 </Application>
