--- a/projects/spark/asdoc/en_US/spark/primitives/examples/BitmapImageExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/BitmapImageExample.mxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- BitmapGraphicExample.mxml -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
-     <s:Panel title="Bitmap Graphic Example"
-        height="75%" width="75%" layout="horizontal"
-        paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
-          <Canvas top="0" bottom="0" left="0" right="0">
-               <!-- Single image, not resized, not repeated. -->
-               <s:Graphic x="0" y="0">             
-                    <BitmapGraphic id="bg1" source="@Embed('assets/AirIcon12x12.gif')"/>
-               </s:Graphic>
-               <!-- Single image, scaled to fit specified dimensions. -->
-               <s:Graphic x="150" y="0">
-                    <BitmapGraphic id="bg2" source="@Embed('assets/AirIcon12x12.gif')" width="60" height="60" resizeMode="scale"/>
-               </s:Graphic>
-               <!-- Repeated image to fit specified dimensions. -->
-               <s:Graphic x="300" y="0">
-                    <BitmapGraphic id="bg3" source="@Embed('assets/AirIcon12x12.gif')" width="120" height="120" repeat="true"/>
-               </s:Graphic>
-          </Canvas>
-     </s:Panel>
+
+    <s:Panel title="Bitmap Graphic Example"
+            width="75%" height="75%"
+            horizontalCenter="0" verticalCenter="0">
+        <s:Group left="10" right="10" top="10" bottom="10">
+            <!-- Single image, not resized, not repeated. -->
+            <s:Graphic x="0" y="0">             
+                <s:BitmapImage id="bg1" source="@Embed('assets/AirIcon12x12.gif')"/>
+            </s:Graphic>
+
+            <!-- Single image, scaled to fit specified dimensions. -->
+            <s:Graphic x="150" y="0">
+                <s:BitmapImage id="bg2" source="@Embed('assets/AirIcon12x12.gif')" width="60" height="60" resizeMode="scale"/>
+            </s:Graphic>
+
+            <!-- Repeated image to fit specified dimensions. -->
+            <s:Graphic x="300" y="0">
+                <s:BitmapImage id="bg3" source="@Embed('assets/AirIcon12x12.gif')" width="120" height="120" repeat="true"/>
+            </s:Graphic>
+        </s:Group>
+    </s:Panel>
+
 </s:Application>
