--- a/projects/spark/asdoc/en_US/spark/primitives/examples/BitmapImageExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/BitmapImageExample.mxml
@@ -8,7 +8,7 @@
         <s:Group left="10" right="10" top="10" bottom="10">
             <!-- Single image, not resized, not repeated. -->
             <s:Graphic x="0" y="0">             
-                <s:BitmapImage id="bg1" source="@Embed('assets/AirIcon12x12.gif')"/>
+                <s:BitmapImage id="bg1" source="@Embed('assets/AirIcon12x12.gif')" resizeMode="noScale"/>
             </s:Graphic>
 
             <!-- Single image, scaled to fit specified dimensions. -->
@@ -18,7 +18,7 @@
 
             <!-- Repeated image to fit specified dimensions. -->
             <s:Graphic x="300" y="0">
-                <s:BitmapImage id="bg3" source="@Embed('assets/AirIcon12x12.gif')" width="120" height="120" repeat="true"/>
+                <s:BitmapImage id="bg3" source="@Embed('assets/AirIcon12x12.gif')" width="120" height="120" resizeMode="repeat"/>
             </s:Graphic>
         </s:Group>
     </s:Panel>
